Changes for 4.0.0alpha8

New features:
..F....... [ZBXNEXT-4312] reworked date picker; implemented keyboard interaction (miks)
..F....PS. [ZBXNEXT-2365] added additional auto-registration operations and re-running of auto-registration actions if host metadata is modified (ashubin, vso)

Bug fixes:
...G...... [ZBX-12070] fixed "proc.num" and "proc.mem" items calculation of values when zabbix_agentd called in test mode (Sergejs)
........S. [ZBX-14423] fixed use of initialized variable during application discovery (vso)
.......PS. [ZBX-12990] improved "vmware.hv.datastore.size" through usage the performance counters (MVekslers)
A.F.I..... [ZBXNEXT-4540] fixed problems filter with same tags not being joined with OR condition (Ivo, Sasha)
..F....... [ZBXNEXT-4576] unified dashboard widget content margins (Andzs, ashubin)
.......PS. [ZBX-12965] - fixed scheduled check calculation during daylight saving changes (wiper)

--------------------------------------------------------------------------------
Changes for 4.0.0alpha7

New features:
A.F.I..PS. [ZBXNEXT-4569] added support of MySQL 8.0 (gcalenko, vso)
....I..... [ZBXNEXT-4565] removed old upgrade DB patches (viktors)
..F.....S. [ZBXNEXT-4320] added ability to store history data in date based indices of elasticsearch (vjaceslavs)
..F....... [ZBXNEXT-4526] increased tags column size in Compact view mode (agriscenko)
..F....... [ZBXNEXT-4528] added link to Zabbix official support page (Andzs, ashubin)
........S. [ZBXNEXT-4520] added values to boolean mapping: "ok, master" as 1 and "err, slave" as 0 (viktors)
..F....... [ZBXNEXT-4185] added support of multiple items in "Plain text" widget (ashubin)
........S. [ZBXNEXT-4163] added support LLD, User macros and User macros with context from LLD macro in Items preprocessing (MVekslers)

Bug fixes:
A.F....... [ZBX-13712] fixed "Undefined index: master_itemid" and SQL errors in item.update and itemprototypr.update methods; fixed updating of discovered items (Sasha)